<?xml version="1.0"?>
<package format="3">
  <name>robot_driver</name>
  <version>0.1.0</version>
  <description>Pico robot driver node</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
